--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "js-cookie": "^3.0.1",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-currency-format": "^1.1.0",
+    "react-number-format": "5.1.4",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.2.0",
-    "react-icons": "^4.3.1"
+    "react-hot-toast": "2.4.0",
+    "react-icons": "4.8.0"
   },
   "devDependencies": {
     "eslint": "8.21.0",
